--- a/index.html
+++ b/index.html
@@ -1262,7 +1262,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <p class="link" style="margin-top: 0;flex:1;">
                                             <a class="btn text-nowrap w-100 btn-md base-btn-bg base-btn-bg-solid base-btn-bg-hover-solid base-btn-text base-btn-borders" href="/pages/step1.html"  target="_blank" rel="noreferrer noopener" >
                                                 <span></span>
-                                                Tìm hiểu ngay
+                                                Đăng ký ngay
                                             </a>
                                 </p>
                         </div>
@@ -1294,7 +1294,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <p class="link" style="margin-top: 0;flex:1;">
                                             <a class="btn text-nowrap w-100 btn-md base-btn-bg base-btn-bg-solid base-btn-bg-hover-solid base-btn-text base-btn-borders" href="/pages/step1.html"  target="_blank" rel="noreferrer noopener" >
                                                 <span></span>
-                                                Tìm hiểu ngay
+                                                Đăng ký ngay
                                             </a>
                                 </p>
                         </div>
@@ -1326,7 +1326,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <p class="link" style="margin-top: 0;flex:1;">
                                             <a class="btn text-nowrap w-100 btn-md base-btn-bg base-btn-bg-solid base-btn-bg-hover-solid base-btn-text base-btn-borders" href="/pages/step1.html"  target="_blank" rel="noreferrer noopener" >
                                                 <span></span>
-                                                Tìm hiểu ngay
+                                                Đăng ký ngay
                                             </a>
                                 </p>
                         </div>
@@ -5624,4 +5624,5 @@ Ngh&#x1ECB; &#x111;&#x1ECB;nh 13            <span class="umbraco-forms-indicator
 
 </body>
     <script nonce="rFzwoSerAQ0rtTBLZUm9vA==" src="https://www.google.com/recaptcha/api.js?render=6LfqwaUrAAAAAIrsu1oZKklSQCHJILZ3IvMeCIAZ"></script>
+
 </html>
