--- a/index.html
+++ b/index.html
@@ -1473,7 +1473,7 @@ Label                                            </label>
 
             
     <div id="79fc9d8d-b0cd-448f-8c5e-1a7b2485ad00" data-umb="79fc9d8d-b0cd-448f-8c5e-1a7b2485ad00" class="">
-        <h1 class="lg heading">Đăng ký ngay!</h1>
+        <h1 class="lg heading">Cần tư vấn!</h1>
     </div>
 
 
@@ -5626,3 +5626,4 @@ Ngh&#x1ECB; &#x111;&#x1ECB;nh 13            <span class="umbraco-forms-indicator
     <script nonce="rFzwoSerAQ0rtTBLZUm9vA==" src="https://www.google.com/recaptcha/api.js?render=6LfqwaUrAAAAAIrsu1oZKklSQCHJILZ3IvMeCIAZ"></script>
 
 </html>
+
