--- a/index.html
+++ b/index.html
@@ -1358,7 +1358,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <p class="link" style="margin-top: 0;flex:1;">
                                             <a class="btn text-nowrap w-100 btn-md base-btn-bg base-btn-bg-solid base-btn-bg-hover-solid base-btn-text base-btn-borders" href="/pages/step1.html"  target="_blank" rel="noreferrer noopener" >
                                                 <span></span>
-                                                Tìm hiểu thêm
+                                                Đăng ký ngay
                                             </a>
                                 </p>
                         </div>
@@ -1473,7 +1473,7 @@ Label                                            </label>
 
             
     <div id="79fc9d8d-b0cd-448f-8c5e-1a7b2485ad00" data-umb="79fc9d8d-b0cd-448f-8c5e-1a7b2485ad00" class="">
-        <h1 class="lg heading">Cần tư vấn!</h1>
+        <h1 class="lg heading">Liên hệ với chúng tôi!</h1>
     </div>
 
 
@@ -5626,4 +5626,5 @@ Ngh&#x1ECB; &#x111;&#x1ECB;nh 13            <span class="umbraco-forms-indicator
     <script nonce="rFzwoSerAQ0rtTBLZUm9vA==" src="https://www.google.com/recaptcha/api.js?render=6LfqwaUrAAAAAIrsu1oZKklSQCHJILZ3IvMeCIAZ"></script>
 
 </html>
+
 
